-Allow transparent background in widgets for better web page integration -Fixed Gyroscope off on Mobile

--- a/demo/public/stylesheets/style.css
+++ b/demo/public/stylesheets/style.css
@@ -3,7 +3,5 @@ body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
   margin: 0px;
   overflow: hidden;
-}
-a {
-  color: #00b7ff;
+  background-color: black;
 }
